--- a/templates/barhorizontal37/index.html
+++ b/templates/barhorizontal37/index.html
@@ -51,7 +51,7 @@
           xAxes: [{
             ticks: {
               callback: function(value, index, values) {
-                return value.toLocaleString('en-US'+'%');
+                return value.toLocaleString('en-US')+'%';
               },
               autoSkip: false,
               beginAtZero: true,
