--- a/templates/bargrouped38/index.html
+++ b/templates/bargrouped38/index.html
@@ -31,7 +31,7 @@
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'Internet Access',
+          label: 'Access Internet',
           data: data.ys,
           fill: false,
           backgroundColor: '#23417D',
@@ -42,7 +42,7 @@
           barPercentage: .8
         },
         {
-          label: 'Device Access',
+          label: 'Access Device',
           data: data.ys2,
           fill: false,
           backgroundColor: '#A83226',
