--- a/templates/bargrouped37/index.html
+++ b/templates/bargrouped37/index.html
@@ -58,7 +58,7 @@
         cornerRadius: 20,
         title:{
           display: false,
-          text: 'Students Not Provided Internet/Decive by Family or Place of Residence'
+          text: 'Students Not Provided Internet/Device by Family or Place of Residence'
         },
         scales: {
           yAxes: [{
