--- a/templates/linechartmulti38/index.html
+++ b/templates/linechartmulti38/index.html
@@ -29,7 +29,7 @@ Chart.defaults.global.title.display = true
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'DOP',
+          label: 'Manhattan',
           data: data.ys,
           fill: false,
           lineTension: 0.5,
@@ -53,7 +53,7 @@ Chart.defaults.global.title.display = true
           hoverBorderColor: "#E6E6E6",
         },
         {
-          label: 'DOC',
+          label: 'Brooklyn',
           data: data.ys2,
           fill: false,
           lineTension: 0.5,
@@ -77,7 +77,7 @@ Chart.defaults.global.title.display = true
           hoverBorderColor: "#E6E6E6",
         },
         {
-          label: 'DOC',
+          label: 'Staten Island',
           data: data.ys3,
           fill: false,
           lineTension: 0.5,
@@ -101,7 +101,7 @@ Chart.defaults.global.title.display = true
           hoverBorderColor: "#E6E6E6",
         },
         {
-          label: 'DOC',
+          label: 'Queens',
           data: data.ys4,
           fill: false,
           lineTension: 0.5,
@@ -125,7 +125,7 @@ Chart.defaults.global.title.display = true
           hoverBorderColor: "#E6E6E6",
         },
         {
-          label: 'DOC',
+          label: 'Bronx',
           data: data.ys5,
           fill: false,
           lineTension: 0.5,
