--- a/templates/linechartmulti38/index.html
+++ b/templates/linechartmulti38/index.html
@@ -34,7 +34,7 @@ Chart.defaults.global.title.display = true
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#222222",
-          borderColor: "#222222",
+          borderColor: "#800000",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
@@ -58,7 +58,7 @@ Chart.defaults.global.title.display = true
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#23417D",
-          borderColor: "#CACACA",
+          borderColor: "#007534",
       //    borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
@@ -82,7 +82,7 @@ Chart.defaults.global.title.display = true
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#23417D",
-          borderColor: "#CACACA",
+          borderColor: "#1D5FD6",
       //    borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
@@ -106,7 +106,7 @@ Chart.defaults.global.title.display = true
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#23417D",
-          borderColor: "#CACACA",
+          borderColor: "#8744BC",
       //    borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
@@ -130,7 +130,7 @@ Chart.defaults.global.title.display = true
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#23417D",
-          borderColor: "#CACACA",
+          borderColor: "#B63F26",
       //    borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
