--- a/templates/linechartmulti38/index.html
+++ b/templates/linechartmulti38/index.html
@@ -161,7 +161,7 @@ Chart.defaults.global.title.display = true
           stacked: false,
           ticks: {
             //max: 5,
-            //min: 200000,
+            min: 6,
             //stepSize: 200000,
             callback: function(value, index, values) {
               return '$'+ value.toLocaleString('en-US');
