--- a/templates/linechartmulti38/index.html
+++ b/templates/linechartmulti38/index.html
@@ -40,12 +40,12 @@ Chart.defaults.global.title.display = true
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#2F56A6",
-          pointBackgroundColor: "#2F56A6",
+          pointBorderColor: "#CACACA",
+          pointBackgroundColor: "#CACACA",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#2F56A6",
-          pointHoverBorderColor: "#2F56A6",
+          pointHoverBackgroundColor: "#CACACA",
+          pointHoverBorderColor: "#CACACA",
           pointHoverBorderWidth: 2,
           pointRadius: 0,
           pointHitRadius: 4,
@@ -189,7 +189,7 @@ Chart.defaults.global.title.display = true
           },
           scaleLabel: {
               display: true,
-              labelString: 'Vacancy Rate'
+              labelString: 'Time'
             }
         }]
       },
