--- a/templates/linechartmulti38/index.html
+++ b/templates/linechartmulti38/index.html
@@ -41,7 +41,7 @@ Chart.defaults.global.title.display = true
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#CACACA",
+          pointBackgroundColor: "#800000",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
           pointHoverBackgroundColor: "#CACACA",
@@ -65,13 +65,13 @@ Chart.defaults.global.title.display = true
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#CACACA",
+          pointBackgroundColor: "#800000",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
           pointHoverBackgroundColor: "#CACACA",
           pointHoverBorderColor: "#CACACA",
           pointHoverBorderWidth: 2,
-          pointRadius: 0,
+          pointRadius: 4,
           pointHitRadius: 4,
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
@@ -89,13 +89,13 @@ Chart.defaults.global.title.display = true
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#CACACA",
+          pointBackgroundColor: "#800000",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
           pointHoverBackgroundColor: "#CACACA",
           pointHoverBorderColor: "#CACACA",
           pointHoverBorderWidth: 2,
-          pointRadius: 0,
+          pointRadius: 4,
           pointHitRadius: 4,
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
@@ -113,13 +113,13 @@ Chart.defaults.global.title.display = true
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#CACACA",
+          pointBackgroundColor: "#800000",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
           pointHoverBackgroundColor: "#CACACA",
           pointHoverBorderColor: "#CACACA",
           pointHoverBorderWidth: 2,
-          pointRadius: 0,
+          pointRadius: 4,
           pointHitRadius: 4,
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
@@ -137,13 +137,13 @@ Chart.defaults.global.title.display = true
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#CACACA",
+          pointBackgroundColor: "#800000",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
           pointHoverBackgroundColor: "#CACACA",
           pointHoverBorderColor: "#CACACA",
           pointHoverBorderWidth: 2,
-          pointRadius: 0,
+          pointRadius: 4,
           pointHitRadius: 4,
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
