--- a/templates/linechartmulti38/index.html
+++ b/templates/linechartmulti38/index.html
@@ -65,7 +65,7 @@ Chart.defaults.global.title.display = true
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#800000",
+          pointBackgroundColor: "#007534",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
           pointHoverBackgroundColor: "#CACACA",
@@ -89,7 +89,7 @@ Chart.defaults.global.title.display = true
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#800000",
+          pointBackgroundColor: "#1D5FD6",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
           pointHoverBackgroundColor: "#CACACA",
@@ -113,7 +113,7 @@ Chart.defaults.global.title.display = true
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#800000",
+          pointBackgroundColor: "#8744BC",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
           pointHoverBackgroundColor: "#CACACA",
@@ -137,7 +137,7 @@ Chart.defaults.global.title.display = true
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#800000",
+          pointBackgroundColor: "#B63F26",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
           pointHoverBackgroundColor: "#CACACA",
