--- a/templates/scatter7/index.html
+++ b/templates/scatter7/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Comorbidity Severity Index and COVID19 Death Rate</title>
+  <title>Income by Neighborhood and storefront vacancy rate</title>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
