--- a/templates/bargrouped39/index.html
+++ b/templates/bargrouped39/index.html
@@ -157,7 +157,7 @@
     const ys5 = [];
     const ys6 = [];
 
-    const response = await fetch('Uniformed_vs_Non-Uniformed_employees_by_Race_Ethnicity.csv');
+    const response = await fetch('Uniformed_vs_Non-Uniformed_employees_by_Race_Ethnicity_2020 - unif_ethnicity.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
