--- a/templates/bargrouped41/index.html
+++ b/templates/bargrouped41/index.html
@@ -113,7 +113,7 @@
     const ys4 = [];
     const ys5 = [];
 
-    const response = await fetch('Uniformed_Gender.csv');
+    const response = await fetch('Uniformed_Gender_2019.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
