--- a/templates/bargrouped42/index.html
+++ b/templates/bargrouped42/index.html
@@ -157,7 +157,7 @@
     const ys5 = [];
     const ys6 = [];
 
-    const response = await fetch('PT_Highest_Titles_Eth.csv');
+    const response = await fetch('PT_Highest_Titles_Eth_2019.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
