--- a/templates/stackedbar26/index.html
+++ b/templates/stackedbar26/index.html
@@ -121,7 +121,7 @@
     const y2 = [];
 
 
-    const response = await fetch('doitt_case_study_data.csv');
+    const response = await fetch('doitt_salaries_by_gender_2019.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
