--- a/templates/bargrouped44/index.html
+++ b/templates/bargrouped44/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Adjusted Pay Gap by Race/Ethnicity and Gender, Average Cents on the Dollar Earned</title>
+  <title>Non-Adjusted Pay Gap by Race/Ethnicity and Gender</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
     <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -31,7 +31,7 @@
         labels: data.xs,
         datasets: [{
           label: 'Male',
-          data: data.ys,
+          data: data.ys2,
           fill: false,
           backgroundColor: '#23417D',
           borderColor: '#E6E6E6',
@@ -42,7 +42,7 @@
         },
         {
           label: 'Female',
-          data: data.ys2,
+          data: data.ys,
           fill: false,
           backgroundColor: '#A83226',
           borderColor: '#E6E6E6',
@@ -57,7 +57,7 @@
         cornerRadius: 20,
         title:{
           display: false,
-          text: 'Adjusted Pay Gap by Race/Ethnicity and Gender'
+          text: 'Non-Adjusted Pay Gap by Race/Ethnicity and Gender'
         },
         scales: {
           yAxes: [{
@@ -65,8 +65,7 @@
               callback: function(value, index, values) {
                 return value.toLocaleString('en-US');
               },
-              //beginAtZero: false,
-              min: .50
+              beginAtZero: true,
             },
             gridLines: {
               display: true
@@ -81,7 +80,6 @@
               callback: function(value, index, values) {
                 return '$'+value.toLocaleString('en-US');
               },
-              min: .50
             //  fontStyle: 'strong'
             },
             gridLines: {
@@ -89,7 +87,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Adjusted Cents on the Dollar Earned'
+              labelString: 'Median Salary'
             }
           }]
         },
@@ -114,7 +112,7 @@
     const ys2 = [];
 
 
-    const response = await fetch('CSV_Non_Adjusted_and_Adjusted_Gender_Pay_Gap_Race_and_Gender_2019.csv');
+    const response = await fetch('Non-Adjusted_and_Adjusted_Gender_Pay_Gap_Race_Gender_2019.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
@@ -122,9 +120,9 @@
       const columns = row.split(',');
       const one = columns[0];
       xs.push(one);
-      const two = columns[5];
+      const two = columns[1];
       ys.push(parseFloat(two)); //make data from string to number
-      const three = columns[6];
+      const three = columns[2];
       ys2.push(parseFloat(three)); //make data from string to number
       console.log(one, two, three);
     });
