--- a/templates/bar52/index.html
+++ b/templates/bar52/index.html
@@ -50,7 +50,7 @@
         title:{
           display: true,
           position: 'bottom',
-          text: 'Pay Difference: Males Paid More than Females'
+          text: 'Absolute Pay Difference Between Males & Females'
         },
         scales: {
           xAxes: [{
