test line style

--- a/templates/linechartmulti38/index.html
+++ b/templates/linechartmulti38/index.html
@@ -37,7 +37,7 @@ Chart.defaults.global.title.display = true
           borderColor: "#800000",
           borderWidth: 3,
           borderCapStyle: 'butt',
-          borderDash: [],
+          borderDash: [5, 5],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
