line type test #2

--- a/templates/linechartmulti38/index.html
+++ b/templates/linechartmulti38/index.html
@@ -37,7 +37,7 @@ Chart.defaults.global.title.display = true
           borderColor: "#800000",
           borderWidth: 3,
           borderCapStyle: 'butt',
-          borderDash: [5, 5],
+          borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
@@ -61,7 +61,7 @@ Chart.defaults.global.title.display = true
           borderColor: "#007534",
       //    borderWidth: 3,
           borderCapStyle: 'butt',
-          borderDash: [],
+          borderDash: [5,5],
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
@@ -85,7 +85,7 @@ Chart.defaults.global.title.display = true
           borderColor: "#B63F26",
       //    borderWidth: 3,
           borderCapStyle: 'butt',
-          borderDash: [],
+          borderDash: [10,5],
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
@@ -109,7 +109,7 @@ Chart.defaults.global.title.display = true
           borderColor: "#8744BC",
       //    borderWidth: 3,
           borderCapStyle: 'butt',
-          borderDash: [],
+          borderDash: [10,10],
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
           pointBorderColor: "#CACACA",
