--- a/templates/linechartmulti38/index.html
+++ b/templates/linechartmulti38/index.html
@@ -16,6 +16,7 @@
   <script>
   //CHART JS
   Chart.defaults.global.legend.display = true,
+  Chart.defaults.global.legend.labels.usePointStyle = true;
   //Chart.defaults.global.defaultFontFamily = 'open sans'
 Chart.defaults.global.title.display = true
 
@@ -31,6 +32,7 @@ Chart.defaults.global.title.display = true
         datasets: [{
           label: 'Manhattan',
           data: data.ys,
+          pointStyle: 'line',
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#222222",
@@ -55,6 +57,7 @@ Chart.defaults.global.title.display = true
         {
           label: 'Brooklyn',
           data: data.ys2,
+          pointStyle: 'line',
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#23417D",
@@ -79,6 +82,7 @@ Chart.defaults.global.title.display = true
         {
           label: 'Staten Island',
           data: data.ys3,
+          pointStyle: 'line',
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#23417D",
@@ -103,6 +107,7 @@ Chart.defaults.global.title.display = true
         {
           label: 'Queens',
           data: data.ys4,
+          pointStyle: 'line',
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#23417D",
@@ -127,6 +132,7 @@ Chart.defaults.global.title.display = true
         {
           label: 'Bronx',
           data: data.ys5,
+          pointStyle: 'line',
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#23417D",
@@ -151,6 +157,12 @@ Chart.defaults.global.title.display = true
       ]
     },
     options: {
+      legend: {
+      position: 'right',
+      labels: {
+         usePointStyle: true
+      }
+   },
       cornerRadius: 20,
       title:{
         display: false,
