--- a/templates/linechartmulti38/index.html
+++ b/templates/linechartmulti38/index.html
@@ -32,7 +32,7 @@ Chart.defaults.global.title.display = true
         datasets: [{
           label: 'Manhattan',
           data: data.ys,
-        
+        pointStyle: 'line',
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#222222",
@@ -42,17 +42,17 @@ Chart.defaults.global.title.display = true
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#800000",
-          pointBorderWidth: 4,
-          pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#CACACA",
-          pointHoverBorderColor: "#CACACA",
-          pointHoverBorderWidth: 2,
-          pointRadius: 4,
-          pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
+       //   pointBorderColor: "#CACACA",
+       //   pointBackgroundColor: "#800000",
+       //   pointBorderWidth: 4,
+       //   pointHoverRadius: 6,
+       //   pointHoverBackgroundColor: "#CACACA",
+       //   pointHoverBorderColor: "#CACACA",
+       //   pointHoverBorderWidth: 2,
+       //   pointRadius: 4,
+       //   pointHitRadius: 4,
+       //   hoverBackgroundColor: "#E6E6E6",
+       //   hoverBorderColor: "#E6E6E6",
         },
         {
           label: 'Brooklyn',
