legend line type

--- a/templates/linechartmulti38/index.html
+++ b/templates/linechartmulti38/index.html
@@ -45,10 +45,10 @@ Chart.defaults.global.title.display = true
        //   pointBorderColor: "#CACACA",
        //   pointBackgroundColor: "#800000",
        //   pointBorderWidth: 4,
-       //   pointHoverRadius: 6,
-       //   pointHoverBackgroundColor: "#CACACA",
-       //   pointHoverBorderColor: "#CACACA",
-       //   pointHoverBorderWidth: 2,
+        //  pointHoverRadius: 6,
+          pointHoverBackgroundColor: "#CACACA",
+          pointHoverBorderColor: "#CACACA",
+          pointHoverBorderWidth: 2,
        //   pointRadius: 4,
        //   pointHitRadius: 4,
        //   hoverBackgroundColor: "#E6E6E6",
@@ -57,7 +57,7 @@ Chart.defaults.global.title.display = true
         {
           label: 'Brooklyn',
           data: data.ys2,
-         
+          pointStyle: 'line',
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#23417D",
@@ -67,22 +67,22 @@ Chart.defaults.global.title.display = true
           borderDash: [3,8],
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
-          pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#007534",
-          pointBorderWidth: 4,
-          pointHoverRadius: 6,
+        //  pointBorderColor: "#CACACA",
+        //  pointBackgroundColor: "#007534",
+        //  pointBorderWidth: 4,
+        //  pointHoverRadius: 6,
           pointHoverBackgroundColor: "#CACACA",
           pointHoverBorderColor: "#CACACA",
           pointHoverBorderWidth: 2,
-          pointRadius: 4,
-          pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
+       //   pointRadius: 4,
+       //   pointHitRadius: 4,
+       //   hoverBackgroundColor: "#E6E6E6",
+       //   hoverBorderColor: "#E6E6E6",
         },
         {
           label: 'Staten Island',
           data: data.ys3,
-         
+          pointStyle: 'line',
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#23417D",
@@ -92,22 +92,22 @@ Chart.defaults.global.title.display = true
           borderDash: [5,5],
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
-          pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#B63F26",
-          pointBorderWidth: 4,
-          pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#CACACA",
-          pointHoverBorderColor: "#CACACA",
-          pointHoverBorderWidth: 2,
-          pointRadius: 4,
-          pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
+         //   pointBorderColor: "#CACACA",
+         //   pointBackgroundColor: "#B63F26",
+        //    pointBorderWidth: 4,
+        //    pointHoverRadius: 6,
+         //   pointHoverBackgroundColor: "#CACACA",
+        //    pointHoverBorderColor: "#CACACA",
+        //    pointHoverBorderWidth: 2,
+         //   pointRadius: 4,
+          //  pointHitRadius: 4,
+          //  hoverBackgroundColor: "#E6E6E6",
+         //   hoverBorderColor: "#E6E6E6",
         },
         {
           label: 'Queens',
           data: data.ys4,
- 
+        pointStyle: 'line',
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#23417D",
@@ -117,22 +117,22 @@ Chart.defaults.global.title.display = true
           borderDash: [10,5],
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
-          pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#8744BC",
-          pointBorderWidth: 4,
-          pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#CACACA",
-          pointHoverBorderColor: "#CACACA",
-          pointHoverBorderWidth: 2,
-          pointRadius: 4,
-          pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
+         //   pointBorderColor: "#CACACA",
+        //    pointBackgroundColor: "#8744BC",
+        //    pointBorderWidth: 4,
+       //     pointHoverRadius: 6,
+       //     pointHoverBackgroundColor: "#CACACA",
+       //     pointHoverBorderColor: "#CACACA",
+       //     pointHoverBorderWidth: 2,
+        //    pointRadius: 4,
+        //    pointHitRadius: 4,
+        //    hoverBackgroundColor: "#E6E6E6",
+        //    hoverBorderColor: "#E6E6E6",
         },
         {
           label: 'Bronx',
           data: data.ys5,
-        
+         pointStyle: 'line',
           fill: false,
           lineTension: 0.5,
         //  backgroundColor:"#23417D",
@@ -142,17 +142,17 @@ Chart.defaults.global.title.display = true
           borderDash: [20,10],
           borderDashOffset: 0.0,
           // borderJoinStyle: 'miter',
-          pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#1D5FD6",
-          pointBorderWidth: 4,
-          pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#CACACA",
-          pointHoverBorderColor: "#CACACA",
-          pointHoverBorderWidth: 2,
-          pointRadius: 4,
-          pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
+        //    pointBorderColor: "#CACACA",
+        //    pointBackgroundColor: "#1D5FD6",
+        //    pointBorderWidth: 4,
+        //    pointHoverRadius: 6,
+        //    pointHoverBackgroundColor: "#CACACA",
+        //    pointHoverBorderColor: "#CACACA",
+         //   pointHoverBorderWidth: 2,
+        //    pointRadius: 4,
+         //   pointHitRadius: 4,
+        //    hoverBackgroundColor: "#E6E6E6",
+        //    hoverBorderColor: "#E6E6E6",
         }
       ]
     },
