comment out console.log

--- a/templates/scatter7/index.html
+++ b/templates/scatter7/index.html
@@ -21,7 +21,7 @@
     console.log('yay chart');
   })
   .catch(error =>{
-    console.log('error!');
+   // console.log('error!');
     console.error(error);
   });
 
@@ -147,7 +147,7 @@
       xy.push(xsys);
 
       //      console.log(zips_nbhd);
-      console.log(xy);
+    //  console.log(xy);
     });
     return { xs, ys, zs, as, za};
     return { xy };
